# Programa.h

./: CMakeLists.txt
Entidades/: Enfermedad.cpp  Enfermedad.h  Paciente.cpp  Paciente.h
Interfaz/: Interfaz.h
Main/: main.cpp
Programa/: Programa.cpp  Programa.h
